# FlaskTransactionManager

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  commands.py  extensions.py  forms.py  models.py  tasks.py  transaction_routes.py  views.py
app/static/: styles.css
app/templates/: base.html  dashboard.html  transactions.html  users.html
migrations/: env.py
