[tool.poetry]
name = "flasktransactionmanager"
version = "0.1.0"
description = ""
authors = ["Татьяна Сарафанова"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.9.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
flask = "3.1.0"
idna = "3.10"
importlib-metadata = "8.5.0"
installer = "0.7.0"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
keyring = "24.3.1"
markupsafe = "3.0.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
packaging = "24.2"
pexpect = "4.9.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pyproject-hooks = "1.2.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.10.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
urllib3 = "2.2.3"
virtualenv = "20.28.0"
werkzeug = "3.1.3"
zipp = "3.21.0"
flask-wtf = "^1.2.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-restx = "^1.3.0"
celery = "^5.4.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
